--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
     <h1>Carlos</h1>
     <p>ahahahhaha</p>
+    <img class="blur-none" src="https://thafd.bing.com/th/id/OIP.20aUpvI7tI6v_RRPgwBx0QHaE8?rs=1&pid=ImgDetMain" />
 </body>
 </html>
