--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,5 +9,6 @@
 <body>
     <h1>Carlos</h1>
     <p>ahahahhaha</p>
+    <p>Oi oi oi</p>
 </body>
 </html>
